// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example schema queries query simple field scope (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forAdmin],
  ],
}
`;

exports[`example schema queries query simple field scope 1`] = `
Object {
  "data": Object {
    "forAdmin": "ok",
  },
}
`;

exports[`example schema query field scope with loader (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forDeferredAdmin],
  ],
}
`;

exports[`example schema query field scope with loader 1`] = `
Object {
  "data": Object {
    "forDeferredAdmin": "ok",
  },
}
`;
